--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf .next",
+    "build:clean": "rimraf .next && next build"
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.5"
