--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,6 @@
     "clean": "rimraf .next",
     "build:clean": "rimraf .next && next build"
   },
-  "devDependencies": {
-    "rimraf": "^5.0.1",
-    "next": "14.0.0"
-  },
   "dependencies": {
     "framer-motion": "^11.3.30",
     "next": "14.0.0",
@@ -32,6 +28,7 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "typescript": "^5",
+    "next": "15.0.2"
   }
 }
