--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.30",
-    "next": "14.2.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-simple-typewriter": "^5.0.1",
     "sharp": "^0.33.5"
@@ -28,7 +28,6 @@
     "eslint-config-next": "14.2.7",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5",
-    "next": "15.0.2"
+    "typescript": "^5"
   }
 }
